--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <header id="header">
             <h1 id="page-title">LO1E VCS 2.T1</h1>
-            <p id="naam">zakarya</p>
+            <p id="zakarya">Naam van Student</p>
             <p id="version">Versie: 1.0</p>
         </header>
 
@@ -20,7 +20,7 @@
                         <h2>Introductie</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/standby.png">
+                        <img src="images/koekjemonster.jpg">
                     </div>
                 </header>
                 <section>
